syntax = "proto3";

package proto;

import "util/position.proto";

message RobotPosition {
    string camera_name = 1;
    float timestamp = 2;
    float confidence = 3;
    util.Position2d estimated_position = 4;
}