syntax = "proto3";

import "util/position.proto";

package proto;

enum SetType {
  IMU = 0;
  ODOMETRY = 1;
}

message SetPosition {
  int64 timestamp = 1;
  util.Position3d new_position = 2;
  SetType set_type = 3;
}
